--- a/selected_works.html
+++ b/selected_works.html
@@ -28,11 +28,11 @@
     </div>
 
     <div class="works">
-      <img class="slideshow" src="immagini/scansione2.jpg">
-      <img class="slideshow" src="immagini/scansione3.jpg">
-      <img class="slideshow" src="immagini/scansione4.jpg">
-      <img class="slideshow" src="immagini/scansione5.jpg">
-      <img class="slideshow" src="immagini/left.png">
+      <img class="slideshow" src="immagini/y.jpg">
+      <img class="slideshow" src="immagini/yo.jpg">
+      <img class="slideshow" src="immagini/yoy.jpg">
+      <img class="slideshow" src="immagini/yoyo.jpg">
+      <img class="slideshow" src="immagini/yoyoy.png">
 
     </div>
 
