--- a/selected_works.html
+++ b/selected_works.html
@@ -30,9 +30,9 @@
     <div class="works">
       <img class="slideshow" src="immagini/y.jpg">
       <img class="slideshow" src="immagini/yo.jpg">
-      <img class="slideshow" src="immagini/yoy.jpg">
-      <img class="slideshow" src="immagini/yoyo.jpg">
-      <img class="slideshow" src="immagini/yoyoy.png">
+      <img class="slideshow prova" src="immagini/yoy.jpg">
+      <img class="slideshow prova2" src="immagini/yoyo.jpg">
+      <img class="slideshow prova3" src="immagini/yoyoy.png">
 
     </div>
 
