--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   </head>
   <body>
     <div class="main_content">
-                  Sebastiano Campoccia is a graphic designer focused in editorial <br>
-                  and web design, currently based between Berlin (DE) and Treviso (IT).
+                  Sebastiano Campoccia is a graphic designer focused in editorial and <br class="break_desktop">
+                  web design, currently based between Berlin (DE) and Treviso (IT).
     <div  id="first_ph">
       <div class="inside_content">
                   Currently working:
       </div>
+      <br class="break_mobile">
 
                   Art director and web designer at <span class="italic">Tenuta Tenaglia Winery</span><br>
                   Book design for <span class="italic">Matteo Malagugini</span>
@@ -22,8 +23,10 @@
       <div class="inside_content">
                   Webiste is underconstruction. Meanwhile:
       </div>
+      <br class="break_mobile">
 
                   <a class="blue_link" href="selected_works.html">selected works</a> <br>
+                  <br class="break_mobile">
                   <a class="blue_link" href="curriculum.html">look/download CV</a> <br>
     </div>
     </div>
