--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     </div>
     </div>
     <div class="contact">
-                  for more information, collaboration, about work or any other enquire drop a line at <a class="black_link" href="">work.sebastiano@gmail.com</a> <br>
+                  for more information, collaboration, about work or any other enquire drop a line at <a class="black_link" href="">work.sebastiano@gmail.com</a>
+     <br class="break_mobile">
                   or visit <a class="black_link" href="">Linkedin</a>, <a class="black_link" href="">Instagram</a>
     </div>
 
