--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     <div class="contact">
                   for more information, collaboration, about work or any other enquire drop a line at <a class="black_link" href="">work.sebastiano@gmail.com</a>
-     <br class="break_mobile">
+     <br class="break_desktop">
                   or visit <a class="black_link" href="">Linkedin</a>, <a class="black_link" href="">Instagram</a>
     </div>
 
