--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
                   <a class="blue_link" href="selected_works.html">selected works</a> <br>
                   <br class="break_mobile">
                   <a class="blue_link" href="curriculum.html">look/download CV</a> <br>
-                  for more information, collaboration, about work or any other enquire drop a line at 
     </div>
     </div>
-    <div class="contact">
-
+    <div class="camilla">
+                  for more information, collaboration, about work or any other enquire drop a line at <a class="black_link" href="">work.sebastiano@gmail.com</a>
+     <br class="break_desktop">
+                  or visit <a class="black_link" href="">Linkedin</a>, <a class="black_link" href="">Instagram</a>
     </div>
 
   </body>
