--- a/selected_works.html
+++ b/selected_works.html
@@ -62,7 +62,7 @@
 
     </div>
 
-    <div class="contact">
+    <div class="contacts">
       <span class="blue_text">Copyright</span> <br> <br>
                   © 2019 All Right Reserved.
 	<div class="inside_content">Sebastiano Campoccia.</div>
