--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                   <a class="blue_link" href="curriculum.html">look/download CV</a> <br>
     </div>
 
-    <div class="contacts">
+    <div class="">
                   for more information, collaboration, about work or any other enquire drop a line at <a class="black_link" href="">work.sebastiano@gmail.com</a>
      <br class="break_desktop">
                   or visit <a class="black_link" href="">Linkedin</a>, <a class="black_link" href="">Instagram</a>
