--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   </head>
   <body>
     <div class="main_content">
+    <div id="introduction">
                   Sebastiano Campoccia is a graphic designer focused in editorial and <br class="break_desktop">
                   web design, currently based between Berlin (DE) and Treviso (IT).
-    <div  id="first_ph">
+    </div>
+    <div id="first_ph">
       <div class="inside_content">
                   Currently working:
       </div>
@@ -30,7 +32,6 @@
                   <br class="break_mobile">
                   <a class="blue_link" href="curriculum.html">look/download CV</a> <br>
     </div>
-
     <div class="contacts">
                   for more information, collaboration, about work or any other enquire drop a line at <a class="black_link" href="">work.sebastiano@gmail.com</a>
      <br class="break_desktop">
