--- a/selected_works.html
+++ b/selected_works.html
@@ -17,56 +17,60 @@
 
 
     <div class="main_content">
-      <span class="blue_text">Selected Works</span> <br> <br>
+      <div class="main_works">
+        <span class="blue_text">Selected Works</span> <br> <br>
+        <span class="first_line"></span>
+          <div class="inside_content">
+             <span class="second_line"></span>
+          </div>
+          <div class="numero_div blue_text"></div>
+      </div>
 
 
-<span class="first_line"></span>
-<div class="inside_content">
-	<span class="second_line"></span>
 
-</div>
-<div class="numero_div blue_text"></div>
+        <div class="works">
+          <span class="works_title text_1">lavoro numero 1</span>
+          <span class="works_title text_2_1">lavoro numero 1</span>
+          <img class="slideshow project1" src="immagini/y.jpg">
+          <img class="slideshow project1" src="immagini/yo.jpg">
+          <img class="slideshow project1" src="immagini/yoy.jpg">
+          <img class="slideshow project1" src="immagini/yoyo.jpg">
 
+
+        </div>
+
+        <div class="works">
+          <span class="works_title text_2">lavoro numero 2</span>
+          <span class="works_title text_2_2">lavoro numero 2</span>
+          <img class="slideshow project2" src="immagini/one.jpeg">
+          <img class="slideshow project2" src="immagini/two.jpeg">
+          <img class="slideshow project2" src="immagini/three.jpeg">
+          <img class="slideshow project2" src="immagini/four.jpg">
+
+
+
+        </div>
+
+        <div class="works">
+          <span class="works_title text_3">lavoro numero 3</span>
+          <span class="works_title text_2_3">lavoro numero 3</span>
+          <img class="slideshow project3" src="immagini/y.jpg">
+          <img class="slideshow project3" src="immagini/yo.jpg">
+          <img class="slideshow project3" src="immagini/yoy.jpg">
+          <img class="slideshow project3" src="immagini/yoyo.jpg">
+
+        </div>
+
+        <div class="contacts">
+          <span class="blue_text">Copyright</span> <br> <br>
+                      © 2019 All Right Reserved.
+    	  <div class="inside_content">Sebastiano Campoccia.</div>
+        </div>
     </div>
 
-    <div class="works">
-      <span class="works_title text_1">cacca puzza</span>
-      <span class="works_title text_2_1">cacca puzza</span>
-      <img class="slideshow project1" src="immagini/y.jpg">
-      <img class="slideshow project1" src="immagini/yo.jpg">
-      <img class="slideshow project1" src="immagini/yoy.jpg">
-      <img class="slideshow project1" src="immagini/yoyo.jpg">
-
-
-    </div>
-
-    <div class="works">
-      <span class="works_title text_2">lavoro numero 2</span>
-      <span class="works_title text_2_2">lavoro numero 2</span>
-      <img class="slideshow project2" src="immagini/one.jpeg">
-      <img class="slideshow project2" src="immagini/two.jpeg">
-      <img class="slideshow project2" src="immagini/three.jpeg">
-      <img class="slideshow project2" src="immagini/four.jpg">
 
 
 
-    </div>
-
-    <div class="works">
-      <span class="works_title text_3">lavoro numero 3</span>
-      <span class="works_title text_2_3">lavoro numero 3</span>
-      <img class="slideshow project3" src="immagini/y.jpg">
-      <img class="slideshow project3" src="immagini/yo.jpg">
-      <img class="slideshow project3" src="immagini/yoy.jpg">
-      <img class="slideshow project3" src="immagini/yoyo.jpg">
-
-    </div>
-
-    <div class="contacts">
-      <span class="blue_text">Copyright</span> <br> <br>
-                  © 2019 All Right Reserved.
-	<div class="inside_content">Sebastiano Campoccia.</div>
-    </div>
 
 
 <script src="seba_java.js" type="text/javascript"></script>
