--- a/selected_works.html
+++ b/selected_works.html
@@ -20,10 +20,11 @@
       <div class="main_works">
         <span class="blue_text">Selected Works</span> <br> <br>
         <span class="first_line"></span>
-          <div class="inside_content">
-             <span class="second_line"></span>
+        <div class="inside_content">
+          <span class="second_line"></span>
+        </div>
+          <div class="numero_div blue_text">
           </div>
-          <div class="numero_div blue_text"></div>
       </div>
 
 
