--- a/curriculum.html
+++ b/curriculum.html
@@ -5,6 +5,7 @@
     <title>Sebastiano Campoccia</title>
     <link href="seba_style.css" rel="stylesheet" type="text/css">
     <link href="font/stylesheet.css" rel="stylesheet" type="text/css">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
 
