--- a/selected_works.html
+++ b/selected_works.html
@@ -6,6 +6,7 @@
     <link href="seba_style.css" rel="stylesheet" type="text/css">
     <link href="font/stylesheet.css" rel="stylesheet" type="text/css">
     <script src="jquery.js" type="text/javascript"></script>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
 
