--- a/curriculum.html
+++ b/curriculum.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="it" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Sebastiano Campoccia</title>
@@ -109,6 +109,8 @@
 	MZC+<br>
 	Tenuta Tenaglia<br>
 	IUAV<br>
+  <br>
+  <br>
 
   </div>
     </div>
