--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="contacts">
                   for more information, collaboration, about work or any other enquire drop a line at <a class="black_link" href="mailto:work.sebastiano@gmail.com">work.sebastiano@gmail.com</a>
      <br class="break_desktop">
-                  or visit <a class="black_link" href="">Linkedin</a>, <a class="black_link" href="">Instagram</a>
+                  or visit <a class="black_link" href="https://www.linkedin.com/in/sebastiano-campoccia-012015155/">Linkedin</a>, <a class="black_link" href="https://www.instagram.com/sebastiano_campoccya/">Instagram</a>
     </div>
     </div>
 
