--- a/curriculum.html
+++ b/curriculum.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="DL_CV">
-      <a class="plain_link" href="">Download PDF (11MB)</a>
+      <a class="plain_link" href="Portfolio_2_2019_Low.pdf">Download PDF (11MB)</a>
     </div>
 
 
