--- a/selected_works.html
+++ b/selected_works.html
@@ -25,8 +25,8 @@
           <span class="second_line"></span>
         </div>
         <div class="works">
-          <span class="works_title text_1">Oxymoron</span>
-          <span class="works_title text_2_1">lavoro numero 1</span>
+          <span class="works_title text_1">Oxymoron Catalogue, 2017</span>
+          <span class="works_title text_2_1">Exhibithion Catalogue Design</span>
           <img class="slideshow project1" src="immagini/1_Oxymoron/1_ox_white_002.png">
           <img class="slideshow project1" src="immagini/1_Oxymoron/2_2H8A4954_1.jpg">
           <img class="slideshow project1" src="immagini/1_Oxymoron/3_ox_white_003.png">
@@ -44,8 +44,8 @@
 
         </div>
         <div class="works">
-          <span class="works_title text_2">Atelier Florian Markl</span>
-          <span class="works_title text_2_2">lavoro numero 2</span>
+          <span class="works_title text_2">Atelier Florian Markl, 2018</span>
+          <span class="works_title text_2_2">Web Design, Photography</span>
           <img class="slideshow project2" src="immagini/2_Atelier_Florian_Markl/1_Screen-Shot-2018-07-05-at-13.17.56.png">
           <img class="slideshow project2" src="immagini/2_Atelier_Florian_Markl/2_Screen-Shot-2018-07-05-at-13.18.20.png">
           <img class="slideshow project2" src="immagini/2_Atelier_Florian_Markl/3_2H8A5475-copy_1.jpg">
