--- a/selected_works.html
+++ b/selected_works.html
@@ -61,8 +61,8 @@
 
         </div>
         <div class="works">
-          <span class="works_title text_3">Anouk K Workshop</span>
-          <span class="works_title text_2_3">lavoro numero 3</span>
+          <span class="works_title text_3">Anouk Kruithof Review, 2018</span>
+          <span class="works_title text_2_3">Book Design - Dummy</span>
           <img class="slideshow project3" src="immagini/3_Anouk_K_Workshop/1_Screenshot-2018-10-31-at-15.12.50.jpg">
           <img class="slideshow project3" src="immagini/3_Anouk_K_Workshop/2_Sfondo_white_002.png">
           <img class="slideshow project3" src="immagini/3_Anouk_K_Workshop/3_2H8A5540_1.jpg">
@@ -79,8 +79,8 @@
         </div>
 
         <div class="works">
-          <span class="works_title text_4">Anouk K Workshop</span>
-          <span class="works_title text_2_4">lavoro numero 3</span>
+          <span class="works_title text_4">Charta17, 2015</span>
+          <span class="works_title text_2_4">Layout Digital Design</span>
           <img class="slideshow project4" src="immagini/4_Charta17/1_Screenshot-2019-03-18-at-13.21.09.png">
           <img class="slideshow project4" src="immagini/4_Charta17/2_Screenshot-2019-03-18-at-13.21.04.png">
           <img class="slideshow project4" src="immagini/4_Charta17/3_Screenshot-2018-12-29-at-19.24.57.png">
@@ -91,8 +91,8 @@
 
 
         <div class="works">
-          <span class="works_title text_5">Anouk K Workshop</span>
-          <span class="works_title text_2_5">lavoro numero 3</span>
+          <span class="works_title text_5">Gr1ps, 2011</span>
+          <span class="works_title text_2_5">Logo Design, Production Artworks </span>
           <img class="slideshow project5" src="immagini/5_Gr1ps/1_LOGOS-GRIPS-099.jpg">
           <img class="slideshow project5" src="immagini/5_Gr1ps/2_GRIPS-RASHGUARDS-001-03.jpg">
           <img class="slideshow project5" src="immagini/5_Gr1ps/3_GRIPS-SHORT-001-06.jpg">
@@ -103,8 +103,8 @@
         </div>
 
         <div class="works">
-          <span class="works_title text_6">Anouk K Workshop</span>
-          <span class="works_title text_2_6">lavoro numero 3</span>
+          <span class="works_title text_6">La Stanza, 2019</span>
+          <span class="works_title text_2_6">Visual Identity - Proposal</span>
           <img class="slideshow project6" src="immagini/6_Apercu/1_2H8A6059_1.jpg">
           <img class="slideshow project6" src="immagini/6_Apercu/2_Render_Apercu_2-min.png">
           <img class="slideshow project6" src="immagini/6_Apercu/3_2H8A6060_1.jpg">
@@ -124,8 +124,8 @@
 
 
         <div class="works">
-          <span class="works_title text_7">Anouk K Workshop</span>
-          <span class="works_title text_2_7">lavoro numero 3</span>
+          <span class="works_title text_7">MZCplus, 2019</span>
+          <span class="works_title text_2_7">Web Design</span>
           <img class="slideshow project7" src="immagini/7_BAC/1_Screenshot-2019-01-17-at-18.13.24-min.png">
           <img class="slideshow project7" src="immagini/7_BAC/2_Screenshot-2018-10-25-at-16.36.35-min.png">
           <img class="slideshow project7" src="immagini/7_BAC/3_Screenshot-2018-10-25-at-16.41.27-min.png">
@@ -143,8 +143,8 @@
 
 
         <div class="works">
-          <span class="works_title text_8">Anouk K Workshop</span>
-          <span class="works_title text_2_8">lavoro numero 3</span>
+          <span class="works_title text_8">Sarah Palmer, 2012</span>
+          <span class="works_title text_2_8">Book Design, Set Design, Photography</span>
           <img class="slideshow project8" src="immagini/8_Grumgo/1_Iphone-seceond-version-finished_1.jpg">
           <img class="slideshow project8" src="immagini/8_Grumgo/2_Iphone-seceond-version-finished_4.jpg">
           <img class="slideshow project8" src="immagini/8_Grumgo/3_Iphone-seceond-version-finished_5.jpg">
@@ -160,8 +160,8 @@
         </div>
 
         <div class="works">
-          <span class="works_title text_9">Anouk K Workshop</span>
-          <span class="works_title text_2_9">lavoro numero 3</span>
+          <span class="works_title text_9">Anarchist Collectives in Rural Cambodia, 2012</span>
+          <span class="works_title text_2_9">Thesis Design + Final Major Project</span>
           <img class="slideshow project9" src="immagini/10_LAstanza/1_Lastanza_Render_01.jpg">
 
 
@@ -169,8 +169,8 @@
 
 
         <div class="works">
-          <span class="works_title text_10">Anouk K Workshop</span>
-          <span class="works_title text_2_10">lavoro numero 3</span>
+          <span class="works_title text_10">Empire, 2013</span>
+          <span class="works_title text_2_10">Book Design, Photography</span>
           <img class="slideshow project10" src="immagini/11_MZCplus/1_Screenshot-2019-01-22-at-11.07.27-min.png">
           <img class="slideshow project10" src="immagini/11_MZCplus/2_Screenshot-2019-01-22-at-11.08.21-min.png">
           <img class="slideshow project10" src="immagini/11_MZCplus/3_Screenshot-2019-01-22-at-11.10.41-min.png">
