--- a/selected_works.html
+++ b/selected_works.html
@@ -45,7 +45,7 @@
         </div>
         <div class="works">
           <span class="works_title text_2">Atelier Florian Markl, 2018</span>
-          <span class="works_title text_2_2">Web Design, Photography</span>
+          <span class="works_title text_2_2">Web Design, UI Design, Photography</span>
           <img class="slideshow project2" src="immagini/2_Atelier_Florian_Markl/1_Screen-Shot-2018-07-05-at-13.17.56.png">
           <img class="slideshow project2" src="immagini/2_Atelier_Florian_Markl/2_Screen-Shot-2018-07-05-at-13.18.20.png">
           <img class="slideshow project2" src="immagini/2_Atelier_Florian_Markl/3_2H8A5475-copy_1.jpg">
@@ -103,8 +103,8 @@
         </div>
 
         <div class="works">
-          <span class="works_title text_6">La Stanza, 2019</span>
-          <span class="works_title text_2_6">Visual Identity - Proposal</span>
+          <span class="works_title text_6">Apercu Unofficial, 2019</span>
+          <span class="works_title text_2_6">Specimen Book Design</span>
           <img class="slideshow project6" src="immagini/6_Apercu/1_2H8A6059_1.jpg">
           <img class="slideshow project6" src="immagini/6_Apercu/2_Render_Apercu_2-min.png">
           <img class="slideshow project6" src="immagini/6_Apercu/3_2H8A6060_1.jpg">
@@ -124,8 +124,8 @@
 
 
         <div class="works">
-          <span class="works_title text_7">MZCplus, 2019</span>
-          <span class="works_title text_2_7">Web Design</span>
+          <span class="works_title text_7">BAC Radio, 2018</span>
+          <span class="works_title text_2_7">Web Design, UI Design</span>
           <img class="slideshow project7" src="immagini/7_BAC/1_Screenshot-2019-01-17-at-18.13.24-min.png">
           <img class="slideshow project7" src="immagini/7_BAC/2_Screenshot-2018-10-25-at-16.36.35-min.png">
           <img class="slideshow project7" src="immagini/7_BAC/3_Screenshot-2018-10-25-at-16.41.27-min.png">
@@ -143,8 +143,8 @@
 
 
         <div class="works">
-          <span class="works_title text_8">Sarah Palmer, 2012</span>
-          <span class="works_title text_2_8">Book Design, Set Design, Photography</span>
+          <span class="works_title text_8">Grumgo, 2012</span>
+          <span class="works_title text_2_8">Ui Design</span>
           <img class="slideshow project8" src="immagini/8_Grumgo/1_Iphone-seceond-version-finished_1.jpg">
           <img class="slideshow project8" src="immagini/8_Grumgo/2_Iphone-seceond-version-finished_4.jpg">
           <img class="slideshow project8" src="immagini/8_Grumgo/3_Iphone-seceond-version-finished_5.jpg">
@@ -160,8 +160,8 @@
         </div>
 
         <div class="works">
-          <span class="works_title text_9">Anarchist Collectives in Rural Cambodia, 2012</span>
-          <span class="works_title text_2_9">Thesis Design + Final Major Project</span>
+          <span class="works_title text_9">La Stanza, 2019</span>
+          <span class="works_title text_2_9">Visual Identity - Proposal</span>
           <img class="slideshow project9" src="immagini/10_LAstanza/1_Lastanza_Render_01.jpg">
 
 
@@ -169,8 +169,8 @@
 
 
         <div class="works">
-          <span class="works_title text_10">Empire, 2013</span>
-          <span class="works_title text_2_10">Book Design, Photography</span>
+          <span class="works_title text_10">MZCplus, 2019</span>
+          <span class="works_title text_2_10">Web Design</span>
           <img class="slideshow project10" src="immagini/11_MZCplus/1_Screenshot-2019-01-22-at-11.07.27-min.png">
           <img class="slideshow project10" src="immagini/11_MZCplus/2_Screenshot-2019-01-22-at-11.08.21-min.png">
           <img class="slideshow project10" src="immagini/11_MZCplus/3_Screenshot-2019-01-22-at-11.10.41-min.png">
@@ -183,8 +183,8 @@
         </div>
 
         <div class="works">
-          <span class="works_title text_11">Anouk K Workshop</span>
-          <span class="works_title text_2_11">lavoro numero 3</span>
+          <span class="works_title text_11">Sarah Palmer, 2012</span>
+          <span class="works_title text_2_11">Book Design, Set Design, Photography</span>
           <img class="slideshow project11" src="immagini/12_Sarah_Palmer/1_Screen-Shot-2016-07-19-at-19.55.10_Edit.jpg">
           <img class="slideshow project11" src="immagini/12_Sarah_Palmer/2_IMG_8106_Edit.jpg">
           <img class="slideshow project11" src="immagini/12_Sarah_Palmer/3_MG_8300_Edit.jpg">
@@ -199,8 +199,8 @@
         </div>
 
         <div class="works">
-          <span class="works_title text_12">Anouk K Workshop</span>
-          <span class="works_title text_2_12">lavoro numero 3</span>
+          <span class="works_title text_12">Anarchist Collectives in Rural Cambodia, 2012</span>
+          <span class="works_title text_2_12">Thesis Design + Final Major Project</span>
           <img class="slideshow project12" src="immagini/13_Thesis+FMP/1_IMG_5870.jpg">
           <img class="slideshow project12" src="immagini/13_Thesis+FMP/2_IMG_5878-copy-copy.jpg">
           <img class="slideshow project12" src="immagini/13_Thesis+FMP/3_IMG_5880-copy-copy.jpg">
@@ -219,8 +219,8 @@
         </div>
 
         <div class="works">
-          <span class="works_title text_13">Anouk K Workshop</span>
-          <span class="works_title text_2_13">lavoro numero 3</span>
+          <span class="works_title text_13">Empire, 2013</span>
+          <span class="works_title text_2_13">Book Design, Photography</span>
           <img class="slideshow project13" src="immagini/14_Empire/1_Screenshot-2018-10-31-at-16.03.52.jpg">
           <img class="slideshow project13" src="immagini/14_Empire/1_Sfondo_white_1.png">
           <img class="slideshow project13" src="immagini/14_Empire/2_Sfondo_white_2.png">
