--- a/curriculum.html
+++ b/curriculum.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="DL_CV">
-      <a class="plain_link" href="Portfolio_2_2019_Low.pdf" target="_blank" download="Portfolio-SC">Download PDF (11MB)</a>
+      <a class="plain_link" href="Portfolio_2_2019_Low.pdf" target="_blank" download="Portfolio-SC">Download full PDF (11MB)</a>
     </div>
 
 
@@ -24,19 +24,17 @@
 <span class="italic">Graphic Design</span>
 <div class="inside_content">
 
-	Art Direction <br>
-	Editorial Design<br>
+	Art Direction<br>
+	Editorial Design <br>
 	Book Design<br>
 	Web Design<br>
 	Visual Identity<br>
 	Communication<br>
-	Screenprinting<br>
 </div>
 <br>
 <span class="italic">Photography</span>
 <div class="inside_content">
 	Commercial<br>
-	Editorial<br>
 	Fine Art, Personal<br>
 	Digital, Analog<br>
 	Curatorial<br>
@@ -54,15 +52,15 @@
 	13 Gallery, London, 2013 (Exhibition)<br>
 	Krakow Photomont, Krakow, 2015 (Exhibition)<br>
 	Der Greif Magazine, Guest room, 2015 (Publication)<br>
-  	Aldo Nascimben Prize, Treviso, 2015 (Award)<br>
-	Aldo Nascimben, Treviso, 2015 (Exhibition)<br>
-	Own Perspective, London, 2016 (Curator, Exhibition)<br>
-	Oxymoron, Treviso , 2017 (Curator)<br>
+	Aldo Nascimben Prize, Treviso, 2015 (Award)<br>
+ 	Aldo Nascimben, Treviso, 2015 (Exhibition)<br>
+	Own Perspective, London, 2016 (Curator, Exhibition) <br>
+	Oxymoron, Treviso , 2017 (Curator) <br>
 	Cryptozoology, Castelfranco Veneto, 2017 (Curator)<br>
 	The Palace, Berlin, 2018 (Exhibition)<br>
 </div>
 <br>
-<span class="italic">Techs 1</span>
+<span class="italic">Skills</span>
 <div class="inside_content">
 	Photoshop<br>
 	Illustrator<br>
@@ -75,25 +73,17 @@
 	Maxwell<br>
 </div>
 <br>
-<span class="italic">Techs 2</span>
-<div class="inside_content">
-	Digital, analog printing confidence<br>
-	Bookbinding<br>
-	Darkroom (All procedures)<br>
-</div>
-<br>
 <span class="italic">Education</span>
 <div class="inside_content">
 	Humanistic and Languistic Diploma, Galileo Galilei, Treviso, 2012<br>
 	Architectural Drawings, UAL, London, 2014<br>
-		Book Binding, UAL, London, 2015<br>
+	Book Binding, UAL, London, 2015<br>
 	Spatial Design BA, UAL, London, 2016<br>
-	Book Design MA(?), HGB, Leipzig (Pending)<br>
+	Book Design MA(?), (Pending)<br>
 </div>
 <br>
 <span class="italic">Selected Jobs, Clients</span>
 <div class="inside_content">
-	Centottanta Bpm<br>
 	Over Distribution Ltd.<br>
 	Gr1ps Athletic<br>
 	C+S Architects<br>
@@ -108,7 +98,6 @@
 	Ruckeli<br>
 	MZC+<br>
 	Tenuta Tenaglia<br>
-	IUAV<br>
   <br>
   <br>
 
