--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="main_content">
     <div id="introduction">
                   Sebastiano Campoccia is a graphic designer focused in editorial and <br class="break_desktop">
-                  web design, currently based between Berlin (DE) and Treviso (IT).
+                  web design, currently based in Berlin (DE).
     </div>
     <div id="first_ph">
       <div class="inside_content">
@@ -21,6 +21,7 @@
 
                   Art director and web designer at <span class="italic">Tenuta Tenaglia Winery</span><br>
                   Book design for <span class="italic">Matteo Malagugini</span>
+                  Assistant at <span class="italic">Adam Broomberg</span>
     </div>
     <div id="second_ph">
       <div class="inside_content">
