--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <br class="break_mobile">
 
                   Art director and web designer at <span class="italic">Tenuta Tenaglia Winery</span><br>
-                  Book design for <span class="italic">Matteo Malagugini</span>
+                  Book design for <span class="italic">Matteo Malagugini</span><br>
                   Assistant at <span class="italic">Adam Broomberg</span>
     </div>
     <div id="second_ph">
